[project]
name = "crewai-tools"
version = "0.12.1"
description = "Set of tools for the crewAI framework"
authors = [
    {name = "João Moura", email = "joaomdmoura@mgail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1",
    "langchain>0.2,<=0.3",
    "pytest>=8.0.0",
    "lancedb>=0.5.4",
    "openai>=1.12.0",
    "chromadb>=0.4.22",
    "pyright>=1.1.350",
    "pytube>=15.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.18.1",
    "docx2txt>=0.8",
    "docker>=7.1.0",
    "embedchain>=0.1.114"
]

[project.urls]
Homepage = "https://crewai.com"
Repository = "https://github.com/crewAIInc/crewAI-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
e2b = [
    "e2b_code_interpreter>=0.1.0",
]
