[project]
name = "crewai-tools"
version = "0.25.0"
description = "Set of tools for the crewAI framework"
readme = "README.md"
authors = [
    { name = "João Moura", email = "joaomdmoura@gmail.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1",
    "pytest>=8.0.0",
    "lancedb>=0.5.4",
    "openai>=1.12.0",
    "chromadb>=0.4.22",
    "pyright>=1.1.350",
    "pytube>=15.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.18.1",
    "docx2txt>=0.8",
    "docker>=7.1.0",
    "embedchain>=0.1.114",
    "crewai>=0.86.0",
    "scrapegraph-py>=1.8.0",
    "serpapi>=0.1.5",
]

[tool.uv]
dev-dependencies = [
    "linkup-sdk>=0.2.1",
    "spider-client>=0.1.25"
]

[project.urls]
Homepage = "https://crewai.com"
Repository = "https://github.com/crewAIInc/crewAI-tools"
Documentation = "https://docs.crewai.com"


[project.scripts]

[project.optional-dependencies]
weaviate-client = [
    "weaviate-client>=4.9.6",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
