[project]
name = "crewai-tools"
version = "0.38.1"
description = "Set of tools for the crewAI framework"
readme = "README.md"
authors = [
    { name = "João Moura", email = "joaomdmoura@gmail.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1",
    "lancedb>=0.5.4",
    "openai>=1.12.0",
    "chromadb>=0.4.22",
    "pyright>=1.1.350",
    "pytube>=15.0.0",
    "requests>=2.31.0",
    "docker>=7.1.0",
    "embedchain>=0.1.114",
    "crewai>=0.105.0",
    "click>=8.1.8",
    "lancedb>=0.5.4",
]

[project.urls]
Homepage = "https://crewai.com"
Repository = "https://github.com/crewAIInc/crewAI-tools"
Documentation = "https://docs.crewai.com"


[project.scripts]

[project.optional-dependencies]
scrapfly-sdk = [
    "scrapfly-sdk>=0.8.19",
]
sqlalchemy = [
    "sqlalchemy>=2.0.35",
]
multion = [
    "multion>=1.1.0",
]
firecrawl-py = [
    "firecrawl-py>=1.8.0",
]
composio-core = [
    "composio-core>=0.6.11.post1",
]
browserbase = [
    "browserbase>=1.0.5",
]
weaviate-client = [
    "weaviate-client>=4.10.2",
]
patronus = [
    "patronus>=0.0.16",
]
serpapi = [
    "serpapi>=0.1.5",
]
beautifulsoup4 = [
    "beautifulsoup4>=4.12.3",
]
selenium = [
    "selenium>=4.27.1",
]
spider-client = [
    "spider-client>=0.1.25",
]
scrapegraph-py = [
    "scrapegraph-py>=1.9.0",
]
linkup-sdk = [
    "linkup-sdk>=0.2.2",
]

hyperbrowser = [
    "hyperbrowser>=0.18.0",
]
snowflake = [
    "cryptography>=43.0.3",
    "snowflake-connector-python>=3.12.4",
    "snowflake-sqlalchemy>=1.7.3",
]
exa-py = [
    "exa-py>=1.8.7",
]
qdrant-client = [
    "qdrant-client>=1.12.1",
]
apify = [
    "langchain-apify>=0.1.2,<1.0.0",
]

databricks-sdk = [
    "databricks-sdk>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.0.0",
]
